--- a/whitney.html
+++ b/whitney.html
@@ -15,8 +15,8 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "whitney.html">Whitney</a</li>
-                <li><a href = "grace.html">Grace</a</li>
+                <li><a href = "whitney.html">Whitney</a></li>
+                <li><a href = "grace.html">Grace</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
